--- a/Node/practice/package.json
+++ b/Node/practice/package.json
@@ -9,5 +9,9 @@
   "keywords": [],
   "author": "Om Dada",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "express": "^5.2.1",
+    "nodemon": "^3.1.11"
+  }
 }
