--- a/Node/practice2/package.json
+++ b/Node/practice2/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "practice",
+  "name": "practice2",
   "version": "1.0.0",
-  "description": "Hello World",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Om Dada",
+  "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "express": "^5.2.1"
-    
-  },
-  "devDependencies": {
+    "ejs": "^3.1.10",
+    "express": "^5.2.1",
     "nodemon": "^3.1.11"
   }
-
 }
